@startuml
' Simplified Entity Relationship Diagram for Ahlam’s Girls   

title Ahlam’s Girls    Database Schema

' Core Entities
entity users {
    id
    name
    email
    password
    role
    phone
    address
    city
    country
    zip_code
    is_active
    created_at
    updated_at
}

entity customers {
    id
    name
    email
    phone
    country
    address
    zipcode
    created_at
    updated_at
}

entity orders {
    id
    customer_id
    status
    total_amount
    payment_status
    created_at
    updated_at
}

entity order_items {
    id
    order_id
    product_id
    saved_design_id
    quantity
    unit_price
    total_price
    created_at
    updated_at
}

entity products {
    id
    product_type_id
    name
    slug
    price
    sale_price
    inventory_count
    is_active
    created_at
    updated_at
}

entity product_types {
    id
    name
    slug
    base_price
    is_active
    created_at
    updated_at
}

entity saved_designs {
    id
    user_id
    product_type_id
    name
    design_data
    is_public
    created_at
    updated_at
}

entity design_templates {
    id
    name
    product_type_id
    design_data
    is_premium
    price
    created_at
    updated_at
}

entity roles {
    id
    name
    slug
    is_active
    created_at
    updated_at
}

entity permissions {
    id
    name
    slug
    resource
    action
    created_at
    updated_at
}

' Relationships
users ||--o{ saved_designs
users ||--o{ customers
customers ||--o{ orders
orders ||--o{ order_items
products ||--o{ order_items
product_types ||--o{ products
product_types ||--o{ design_templates
design_templates ||--o{ saved_designs
users }o--o{ roles
roles }o--o{ permissions

note right of users
  User roles: admin, staff, customer
end note

note right of orders
  Status: pending, processing, shipped, delivered, cancelled
end note

note right of products
  Template-based products with variants
end note

@enduml